--- a/index.html
+++ b/index.html
@@ -79,19 +79,17 @@
         <div class="text-center">
           <h1> Alexander Hørsholt </h1>
           <div class="job-title">
-            Senior IT Architect / Software Developer
+            Managing IT Architect
           </div>
           <div class="profile">
             <p>
-              I'm a senior IT architect and software developer. I'm currently situated in Copenhagen, where I work
+              I'm a Managing IT architect, and I'm currently situated in Copenhagen, where I work
               for a well-established IT consultancy which specializes in delivering large, complex IT systems for the
-              public
-              and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new opportunities 
-              within the IT industry.
+              public and private sector. Don't hesitate reaching out to me, as I'm always interested in the movement within the IT industry.
             </p>
             <p>
               I have experience within a wide variety of industries such as insurance, travel
-              assistance, financial services and public/private digital post. I'm an experienced full-stack, software developer with strong competencies within Angular (Typescript), Vue (Javascript) and Spring (Java) to name a
+              assistance, financial services and public/private digital post. Chiefly, I'm an architect, but I'm also an experienced full-stack, software developer with strong competencies within Angular (Typescript), Vue (Javascript), Kafka (Confluent) and Spring (Java) to name a
               few. The section below include a complete overview of my technology stack.
             </p>
             <p>
@@ -101,8 +99,8 @@
               SAFe, as well as using more traditional methodoligies.
             </p>
             <p>
-              I have experience leading teams of developers, where I ensured the facilitating, planning and coordinating
-              of the team. However, I'm most proficient as a software developer leading by example.
+              I have experience with leadership and have been leading product development and teams of developers. As a team leader I always ensured the facilitating, planning and coordinating
+              of the team. I believe in leveraging my craft and by leading via example through my technical expertise.
             </p>
           </div>
         </div>
@@ -138,8 +136,41 @@
               <div class="employee">Netcompany</div>
             </div>
             <div class="job-meta">
+              <div class="title">Managing IT Architect</div>
+              <div class="time">jan. 2024 - Present</div>
+            </div>
+            <div class="job-description">
+              <p>
+                I'm a Managing Architect within Netcompany's financial services business unit. 
+                I have a wide variety of responsibilities. My chief responsibility is acting as the bridge between business and IT. 
+                Some of my involvements include:
+              </p>
+              <ul>
+                <li>Elicitating, formulating and approving requirements and product design</li>
+                <li>Identifying product capabilities and estimating the delivery of these</li>
+                <li>Leading product development</li>
+                <li>Responsibility of technical architecture </li>
+                <li>Responsible for contact with 3rd party vendors</li>
+                <li>Creating an atmosphere for professional growth and leading by example</li>
+                <li>Mitigating problems and risks if they appear</li>
+              </ul>
+              <p>  
+                I believe that leveraging my technical expertise and coupling it with my business understanding puts me in a advantageous position as an architect to lead, develop and advise complex and business critical IT solutions.
+              </p>
+            </div>
+          </div>
+
+          <!-- Mit.dk -->
+          <div class="item">
+            <div class="work-place">
+              <h3 class="place">
+                Mit.dk
+              </h3>
+              <div class="employee">Netcompany</div>
+            </div>
+            <div class="job-meta">
               <div class="title">Senior IT Architect / Software Developer</div>
-              <div class="time">jan. 2023 - Present</div>
+              <div class="time">jan. 2023 - dec. 2023</div>
             </div>
             <div class="job-description">
               <p>
@@ -369,20 +400,25 @@
         </h2>
         <div>
           <div class="text">
-            <p>I'm certified within both SAFe and Scrum, and I have worked with these agile frameworks on many occasions
-              during my career.</p>
+            <p>I hold a variety of certifications for example within both SAFe and Scrum. I have worked with these agile frameworks on many occasions
+              during my career. I always strive to learn more and improve my understanding and I do that through certifications and courses.</p>
           </div>
           <div class="row">
 
-            <div class="col-6">
+            <div class="col-4">
               <img class="image-center" src="icons/safe.png">
               <div class="text-center technology">SAFe Agilist</div>
               <div class="text-center level">SAFe 4</div>
             </div>
-            <div class="col-6">
+            <div class="col-4">
               <img class="image-center" src="icons/psm.png">
               <div class="text-center technology">Scrum Master</div>
               <div class="text-center level">PSM 1</div>
+            </div>
+            <div class="col-4">
+              <img class="image-center" src="icons/confluence.png">
+              <div class="text-center technology">Confluence Fundamentals Apache Kafka</div>
+              <div class="text-center level">Accredited</div>
             </div>
           </div>
 
@@ -459,11 +495,13 @@
             </p>
             <p>If you need help within the areas of: </p>
             <ul>
-              <li>Backend development in Spring, Java and Node.js.</li>
+              <li>Enterprise and business architecture</li>
+              <li>Backend development with Spring, Kafka, Java and Node.js.</li>
               <li>Frontend development in Angular, Vue.js, React and other modern web frameworks.</li>
-              <li>Requirements gathering, software and systems analysis.</li>
-              <li>Prototyping (figma), software and systems design.</li>
-              <li>Genuine consulting and problem solving.</li>
+              <li>Platform configuration through Kubernetes and container configuration via Docker.</li>
+              <li>Requirements elicitation, software and systems analysis.</li>
+              <li>Prototyping, software and systems design.</li>
+              <li>Technical consulting and problem solving.</li>
             </ul>
             <p>I can provide you with assistance, and if you are interested, then don't hesitate reaching out to me via mail: <a
                 href="mailto:alexander.hoersholt@gmail.com">alexander.hoersholt@gmail.com</a> or phone: <a
