--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 <body>
   <main>
     <header>
+                 <div class="print-only print-header-link">
+          This CV is also available online at
+          <a href="https://aleh.dk/">https://aleh.dk/</a>
+        </div>
       <nav class="navbar navbar-expand-lg navbar-light top-bar fixed-top">
+    
         <div class="container-fluid">
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -620,6 +625,7 @@
 
     </div>
   </main>
+  
 </body>
 
 </html>
